spacing corrections

--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,6 @@
 .about-top{
     display: flex;
     flex-direction: column;
-    border-bottom: 1px dashed black;
-    margin-bottom: 20px;
     padding: 0 2%;
 }
 
@@ -14,10 +12,10 @@
 
 .about-middle{
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 20px;
+    border-top: 1px dashed black;
 }
 
 .about-middle h2 {
